[package]
name = "bh_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
macroquad = "0.4.13"
miniquad = "0.4.6"


[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
